automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -73,9 +73,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'title' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-fd9d7aa55aaa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtitle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"hello\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'title' is not defined"
+     ]
+    }
+   ],
    "source": [
     "title(\"hello\")"
    ]
@@ -119,9 +131,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n",
+      "[4, 5, 6, 7]\n",
+      "[1, 2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
    "source": [
     "list_append = [1,2,3,4]\n",
     "list_append.append(5)\n",
@@ -185,7 +207,7 @@
    "source": [
     "Next, we will talk about some of Python's built in **functions**. Unlike methods, Functions are not bound to any particular object or type of object. They can be called by themselves, however, they typically require an argument. Let's take a look at an example before we get too far into how functions work.\n",
     "\n",
-    "The `print()` function takes in as many arguments as we want. It then returns each arguumet *stringified* or the string form of each argument. It can also be executed without any argument, but we will just not have any return value."
+    "The `print()` function takes in as many arguments as we want. It then returns each argument *stringified* or the string form of each argument. It can also be executed without any argument, but we will just not have any return value."
    ]
   },
   {
@@ -199,9 +221,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['this', 'is', 'a', 'list'] {'this-is': 'a-dictionary'} this is a string and third argument\n"
+     ]
+    }
+   ],
    "source": [
     "print([\"this\", \"is\", \"a\", \"list\"], {\"this-is\": 'a-dictionary'}, \"this is a string and third argument\")"
    ]
@@ -452,9 +482,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. 0\n",
+      "2. False\n",
+      "3. 2\n",
+      "4. 3\n",
+      "5. 2\n",
+      "6. []\n",
+      "7. True\n",
+      "8. False\n",
+      "9. True\n",
+      "10. True\n",
+      "11. False\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"1.\", 2 and 0) #\n",
     "print(\"2.\", False and 2) #\n",
@@ -489,9 +537,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. False\n",
+      "1A. True\n",
+      "2. False\n",
+      "3. True\n",
+      "4. False\n",
+      "4A. True\n",
+      "5. True\n",
+      "6. True\n",
+      "7. False\n",
+      "7A. True\n",
+      "8. True\n"
+     ]
+    }
+   ],
    "source": [
     "x = {'name': \"example\"}\n",
     "b = x\n",
@@ -594,7 +660,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
